# Gen-UI

./: .gitignore  README.md
examples/: README.md
examples/gen_ark_makepad/: Cargo.toml
examples/gen_ark_makepad/ui/: .gen_cache
examples/gen_makepad_simple/ui/: .gen_cache  gen.toml
examples/gen_widget_example/: Cargo.toml
examples/gen_widget_example/src/: app.rs  lib.rs  main.rs
examples/gosim_example/ui/: .gen_cache  Cargo.toml
examples/hello/: .gen_cache
examples/hello/src_gen/: Cargo.toml
examples/hello/ui/: .gen_cache
examples/simple1/src_gen/: Cargo.toml
examples/simple1/ui/: .gen_cache
examples/source/: a.gen  a.rs  app.rs  app_main.rs  lib.rs
examples/test_makepad_color/: Cargo.toml
examples/test_makepad_color/ui/: .gen_cache
examples/test_traits/: Cargo.toml
examples/test_traits/src/: main.rs
examples/tests/: Cargo.toml
examples/tests/ui/: .gen_cache
examples/tony_hair_cust/src_gen/: Cargo.toml
examples/tony_hair_cust/ui/: .gen_cache
gen-ui/: Cargo.toml
parse_target/simple/: app.rsx  main.rsx
parse_target/simple_split/: app.rsx  app_style.rsx
rsx/: Cargo.toml  README.md  window.md
rsx/converter/: Cargo.toml
rsx/converter/src/: context.rs  error.rs  lib.rs
rsx/converter/wiki/: convert.rs  handle.md  view_prop.md  (+3 more)
rsx/parser/: Cargo.toml  README.md  parse_result.md  parse_script.md  parse_style.md  parse_template.md  t.css
rsx/src/: README.md  main.rs
tests/test_vue/: ast.js  package-lock.json  package.json  test.vue
wiki/: milestone1.md  view_prop.md  widget.rs  widget2.rs
wiki/tests/: test_widget1.rs
(+218 files in other folders)
